--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 <body>
-  <div id="root" style="height: 100%"></div>
+  <div id="root" style="display: flex; height: 100%; flex-direction: column">
+  </div>
 </body>
 </html>
